--- a/sway/config
+++ b/sway/config
@@ -33,10 +33,11 @@ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 # Requires: desktop-backgrounds-compat, swaybg
 output * bg /usr/share/backgrounds/default.png fit
 #output HDMI-A-1 pos 0 0 res 1920x1080 
-output eDP-1 pos 1080 900
+output eDP-1 pos 1920 0
 # Example configuration:
 #
- output HDMI-A-1 resolution 1920x1080 position 0 0 transform 270
+ output HDMI-A-1 resolution 1920x1080 position 0 0 
+ #transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -274,6 +275,9 @@ client.background       $bg
 
 for_window [app_id="firefox" title="Bild-im-Bild"] \
     floating enable, move position 100 100, sticky enable, border none
+
+for_window [app_id="qalculate" title="Qalculate!"] \
+    floating enable, border normal, move position cursor
 
 
 
