--- a/sway/config
+++ b/sway/config
@@ -31,13 +31,16 @@ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # Requires: desktop-backgrounds-compat, swaybg
+
 output * bg /usr/share/backgrounds/default.png fit
+
+output HDMI-A-1 bg /usr/share/backgrounds/default.png fill
+
 #output HDMI-A-1 pos 0 0 res 1920x1080 
-output eDP-1 pos 1920 0
+output eDP-1 pos 1080 900
 # Example configuration:
 #
- output HDMI-A-1 resolution 1920x1080 position 0 0 
- #transform 270
+output HDMI-A-1 resolution 1920x1080 pos 0 0 transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
