--- a/sway/config
+++ b/sway/config
@@ -37,10 +37,11 @@ output * bg /usr/share/backgrounds/default.png fit
 output HDMI-A-1 bg /usr/share/backgrounds/default.png fill
 
 #output HDMI-A-1 pos 0 0 res 1920x1080 
-output eDP-1 pos 1080 900
+output eDP-1 pos 1920 0
 # Example configuration:
 #
-output HDMI-A-1 resolution 1920x1080 pos 0 0 transform 270
+output HDMI-A-1 resolution 1920x1080 pos 0 0 
+#transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -79,9 +80,9 @@ input "1267:12918:ELAN07B9:00_04F3:3276_Touchpad" {
     accel_profile flat
     scroll_factor .5
   }
-input "1130:45201:PixArt_Cherry_USB_Optical_Mouse" {
+input "2362:9488:PixArt_USB_Optical_Mouse" {
     natural_scroll disabled
-    pointer_accel -.4
+    pointer_accel -.2
     accel_profile flat
     scroll_factor .5
   }
@@ -283,6 +284,9 @@ for_window [app_id="qalculate" title="Qalculate!"] \
     floating enable, border normal, move position cursor
 
 for_window [title="Bitwarden – Mozilla Firefox" ]\
+    floating enable
+
+for_window [app_id="blueman-manager" title="Bluetooth-Geräte"] \
     floating enable
 
 include '$(/usr/libexec/sway/layered-include "/usr/share/sway/config.d/*.conf" "/etc/sway/config.d/*.conf" "${XDG_CONFIG_HOME:-$HOME/.config}/sway/config.d/*.conf")'
