--- a/swaylock/config
+++ b/swaylock/config
@@ -15,3 +15,4 @@ ring-clear-color=#e5a445
 ring-ver-color=#00e2ff
 ring-wrong-color=#7d3300
 separator-color=#000000
+image=/usr/share/backgrounds/bg.png'
