--- a/swaylock/config
+++ b/swaylock/config
@@ -4,7 +4,7 @@ inside-color=#adadad87
 inside-clear-color=#a67122bf
 inside-ver-color=#0072ffbf
 inside-wrong-color=#fa0000bf
-key-hl-color=#33db00
+key-hl-color=#37751a
 line-color=#000000
 line-clear-color=#000000
 line-caps-lock-color=#000000
@@ -15,4 +15,4 @@ ring-clear-color=#e5a445
 ring-ver-color=#00e2ff
 ring-wrong-color=#7d3300
 separator-color=#000000
-image=/usr/share/backgrounds/bg.png'
+image=/usr/share/backgrounds/fedora.jpg
