--- a/sway/config
+++ b/sway/config
@@ -32,15 +32,15 @@ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # Requires: desktop-backgrounds-compat, swaybg
 
-output * bg /usr/share/backgrounds/default.png fit
+output * bg /usr/share/backgrounds/fedora.jpg fit
 
-output HDMI-A-1 bg /usr/share/backgrounds/default.png fill
+#output HDMI-A-1 bg /usr/share/backgrounds/default.png fill
 
 #output HDMI-A-1 pos 0 0 res 1920x1080 
-output eDP-1 pos 1920 0
+output eDP-1 pos 1680 0
 # Example configuration:
 #
-output HDMI-A-1 resolution 1920x1080 pos 0 0 
+output HDMI-A-1 resolution 1680x1050 pos 0 0 
 #transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
@@ -53,7 +53,7 @@ output HDMI-A-1 resolution 1920x1080 pos 0 0
 
 exec swayidle -w \
           timeout 300 'swaylock -f' \
-          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+          timeout 00 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
           timeout 1200 'systemclt suspend' before-sleep 'swaylock -f'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
@@ -114,7 +114,7 @@ input "2362:9488:PixArt_USB_Optical_Mouse" {
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaynag -t error -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
 #
