--- a/swaylock/config
+++ b/swaylock/config
@@ -1,18 +1,20 @@
-bs-hl-color=#db3300
-indicator-thickness=8
-inside-color=#adadad87
-inside-clear-color=#a67122bf
-inside-ver-color=#0072ffbf
-inside-wrong-color=#fa0000bf
-key-hl-color=#37751a
+bs-hl-color=#111111BF
+indicator-thickness=12
+inside-color=#11223300
+inside-clear-color=#FFFFFF7F
+inside-ver-color=#FFFFFF7F
+inside-wrong-color=#FFFFFF7F
+key-hl-color=#efefefBF
 line-color=#000000
-line-clear-color=#000000
+line-clear-color=#FFF
 line-caps-lock-color=#000000
 line-ver-color=#000000
 line-wrong-color=#000000
-ring-color=#70ed19
-ring-clear-color=#e5a445
-ring-ver-color=#00e2ff
-ring-wrong-color=#7d3300
+ring-color=#4caf50
+ring-clear-color=#0000005F
+ring-ver-color=#dfee54
+ring-wrong-color=#fa2233
 separator-color=#000000
 image=/usr/share/backgrounds/fedora_bg.jpg
+indicator-radius=80
+
