--- a/sway/config
+++ b/sway/config
@@ -37,10 +37,10 @@ output * bg /usr/share/backgrounds/fedora.jpg fit
 #output HDMI-A-1 bg /usr/share/backgrounds/default.png fill
 
 #output HDMI-A-1 pos 0 0 res 1920x1080 
-output eDP-1 pos 1680 0
+output eDP-1 pos 1920 0
 # Example configuration:
 #
-output HDMI-A-1 resolution 1680x1050 pos 0 0 
+output HDMI-A-1 resolution 1920x1080 pos 0 0 
 #transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
@@ -85,6 +85,13 @@ input "2362:9488:PixArt_USB_Optical_Mouse" {
     pointer_accel -.2
     accel_profile flat
     scroll_factor .5
+  }
+
+ input "1133:49271:Logitech_USB_Optical_Mouse" {
+    natural_scroll disabled
+    pointer_accel -.2
+    accel_profile flat
+    scroll_factor .8
   }
 
 # You can get the names of your inputs by running: swaymsg -t get_inputs
@@ -241,16 +248,17 @@ smart_gaps on
 #######THEMING
 # Farbdefinitionen im Gruvbox-Stil
 set $bg #1d2021
-set $indicator #6b4e1d
+set $indicator #fa9c84
 set $text #ebdbb2
 set $child #282828
+set $border #bbbdf2
 # Dicke der Fensterrahmen
 set $swaywm_border_thickness 2
 # clas                  border      bg        text      indicator     child
-client.focused          $text       $bg       $text     $indicator    $child
+client.focused          $border       $bg       $text     $indicator    $child
 client.focused_inactive #504945     $bg       $text     $indicator    $child
 client.unfocused        #000000     $bg       $text     $indicator    $child
-client.urgent           #9d0006     $bg       $text     $indicator    $child
+client.urgent           #ee2626     $bg       $text     $indicator    $child
 client.placeholder      $border     $bg       $text     $indicator    $child
 client.background       $bg
 
@@ -287,6 +295,9 @@ for_window [title="Bitwarden – Mozilla Firefox" ]\
     floating enable
 
 for_window [app_id="blueman-manager" title="Bluetooth-Geräte"] \
+    floating enable
+
+for_window [title="Entwicklerwerkzeuge"] \
     floating enable
 
 include '$(/usr/libexec/sway/layered-include "/usr/share/sway/config.d/*.conf" "/etc/sway/config.d/*.conf" "${XDG_CONFIG_HOME:-$HOME/.config}/sway/config.d/*.conf")'
