--- a/swaylock/config
+++ b/swaylock/config
@@ -7,7 +7,7 @@ inside-wrong-color=#FFFFFF7F
 key-hl-color=#efefefBF
 line-color=#000000
 line-clear-color=#FFF
-line-caps-lock-color=#000000
+text-caps-lock-color=#fa2233
 line-ver-color=#000000
 line-wrong-color=#000000
 ring-color=#4caf50
