--- a/sway/config
+++ b/sway/config
@@ -94,6 +94,13 @@ input "2362:9488:PixArt_USB_Optical_Mouse" {
     scroll_factor .8
   }
 
+  input "1133:16529:Logitech_Wireless_Mouse" {
+    natural_scroll disabled
+    pointer_accel -.2
+    accel_profile flat
+    scroll_factor .8
+  }
+
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
