--- a/sway/config
+++ b/sway/config
@@ -51,8 +51,7 @@ output HDMI-A-1 resolution 1920x1080 pos 0 0
 #
 #exec 'swaylock -f --image=/usr/share/backgrounds/bg.png'
 
-exec swayidle -w \
-          timeout 300 'swaylock -f' \
+exec swayidle -w timeout 300 'swaylock -f' \
           timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
           timeout 1200 'systemctl suspend' before-sleep 'swaylock -f'
 #
@@ -259,8 +258,8 @@ bindsym  $mod+Ctrl+h exec systemctl hibernate
 #bindsym $mod+Ctrl+I "exec 'swaymsg inhibit_idle on'"
 
 ###switch tlp power modes
-bindsym $mod+Ctrl+B exec tlp bat
-bindsym $mod+Ctrl+A exec tlp ac
+#bindsym $mod+Ctrl+b exec tlp bat && /home/jappe/.config/waybar/scripts/waybar-tlp.sh
+#bindsym $mod+Ctrl+a exec tlp ac && /home/jappe/.config/waybar/scripts/waybar-tlp.sh
 
 
 
