--- a/sway/config
+++ b/sway/config
@@ -127,7 +127,12 @@ input "2362:9488:PixArt_USB_Optical_Mouse" {
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t error -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+  
+# Shutdown
+
+    bindsym $mod+Shift+Ctrl+e exec swaynag -t error -m 'You pressed the shutdown shortcut. Do you really want to shutdown? This will end your Wayland session.' -B 'Yes, shutdown' 'systemctl poweroff'
+
 #
 # Moving around:
 #
