--- a/sway/config
+++ b/sway/config
@@ -41,6 +41,7 @@ output eDP-1 pos 1680 0
 # Example configuration:
 #
 output HDMI-A-1 resolution 1680x1050 pos 0 0 
+#output HDMI-A-1 resolution 1920x1080 pos 0 0 
 #transform 270
 # 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
@@ -258,6 +259,11 @@ bindsym $mod+Print exec grim -g "$(slurp)" - | wl-copy
 
 ### hibernate
 bindsym  $mod+Ctrl+h exec systemctl hibernate
+
+
+#bemoji
+bindsym Mod4+Shift+b exec bemoji -t
+
 
 ### toggle idle_inhibatior
 #bindsym $mod+Ctrl+I "exec 'swaymsg inhibit_idle on'"
