--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,3 +67,5 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+set-environment -g SSH_AUTH_SOCK $SSH_AUTH_SOCK
+set-environment -g SSH_AGENT_PID $SSH_AGENT_PID
