--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,3 +70,4 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set-environment -g SSH_AGENT_PID "$SSH_AGENT_PID"
 set-environment -g SSH_AUTH_SOCK "$SSH_AUTH_SOCK"
+set-hook -g session-closed[0] 'run-shell "pkill -u $USER ssh-agent"'
