--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,6 +50,9 @@ set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics
 # vim: set ft=tmux tw=0 nowrap:
 set -g mouse on
 
+set -g base-index 1
+setw -g pane-base-index 1
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
