--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -79,11 +79,12 @@ font-bold-italic=GoMonoNerdFontMono-BoldItalic:size=10
 # Selenized white
 
 [cursor]
-color=ffffff 009a8a
+#color=ffffff 009a8a
 
 [colors]
 foreground=c6d0f5
 background=303446
+cursor=ffffff 009a8a
 
 regular0=51576d
 regular1=e78284
@@ -231,4 +232,4 @@ urls=1e66f5
 
 # vim: ft=dosini
 [main]
-include=/usr/share/foot/themes/tempus-classic
+include=/usr/share/foot/themes/tempus-day
