--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -29,7 +29,7 @@
     "disable-scroll": true,
     "all-outputs": true,
     "warp-on-scroll": false,
-    "format": "{icon}",
+    "format": "{index} {icon}",
     "format-icons": {
       "1": "",
       "2": "",
