--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -87,9 +87,9 @@
 		"on-click-right": "mode",
 		"format": {
 			"months":     "<span color='#ffffff'><b>{}</b></span>",
-			"days":       "<span color='#eeeeee'><b>{}</b></span>",
-			"weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-			"weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+			"days":       "<span color='#eeeeee'>{}</span>",
+			"weeks":      "<span color='#99ffdd'>W{}</span>",
+			"weekdays":   "<span color='#ffcc66'>{}</span>",
 			"today":      "<span color='#ff3366'><b><u>{}</u></b></span>"
 		}
 	},
