--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -61,6 +61,10 @@ set -g @pomodoro_sound 'on'  # Sound for desktop notifications (Run `ls /System/
 set -g @pomodoro_notifications 'on' 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+set -g set-titles on
+set -g allow-rename on
+set -g set-titles-string 'Tmux: #S:#I.#P #W'
+
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
