--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -256,7 +256,7 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Print exec grim -g "$(slurp)" - | wl-copy 
 
 # Custom timer hotkey
-bindsym $mod+t exec --no-startup-id /home/jappe/.config/foot/switch-theme.sh
+bindsym $mod+Ctrl+t exec --no-startup-id /home/jappe/.config/foot/switch-theme.sh
 
 ### hibernate
 bindsym  $mod+Ctrl+h exec systemctl hibernate
