corrected font config for foot terminal to show italics correctly (and also other styles)

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -8,10 +8,11 @@
 # title=foot
 # locked-title=no
 
-font=GoMonoNerdFontMono-Regular:size=11
-font-bold=GoMonoNerdFontMono-Bold:size=11
-font-italic=GoMonoNerdFontMono-Italic:size=11
-font-bold-italic=GoMonoNerdFontMono-BoldItalic:size=11
+font = GoMono Nerd Font Mono:size=11
+font-bold = GoMono Nerd Font Mono:weight=bold:size=11
+font-italic = GoMono Nerd Font Mono:slant=italic:size=11
+font-bold-italic = GoMono Nerd Font Mono:weight=bold:slant=italic:size=11
+
 # font-size-adjustment=0.5
 # line-height=<font metrics>
 # letter-spacing=0
@@ -232,4 +233,4 @@ urls=1e66f5
 
 # vim: ft=dosini
 [main]
-include=/usr/share/foot/themes/tempus-totus
+include=/usr/share/foot/themes/tempus-classic
